# Renmei_2.0

./: .gitignore  bot.py  pyproject.toml  requirements.txt  run.py
assets/: profanity.json  roleplay.json
cogs/color_roles/: __init__.py
cogs/control/: __init__.py  commands.py  components.py  execution.py  response.py
cogs/info/: __init__.py  commands.py  components.py
cogs/main/: __init__.py
cogs/music/: __init__.py  commands.py  components.py
cogs/nickname/: __init__.py
cogs/roleplay/: __init__.py  components.py  decorator.py  templater.py
cogs/spotify/: __init__.py  librespot.py  states.py
core/api/: __init__.py
core/checkers/: __init__.py
core/config/: __init__.py
core/console/: __init__.py  listener.py  task.py
core/env/: __init__.py
core/errors/: __init__.py
core/ext/: __init__.py  loader.py  search.py
core/logging/: __init__.py
core/mafic/: node.py
core/utils/: __init__.py  euphopy.py  image.py  misc.py
lavalink/: application.yml
mafic/: node.py  player.py
