[project]
name = "renmei"
version = "2.0.0"
description = "Rina's personal discord bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudscraper>=1.2.71",
    "dave-py>=0.1.2",
    "disnake>=2.12.0",
    "pillow>=12.3.0",
    "pynacl>=1.6.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
]
